--- a/Server/public/style.css
+++ b/Server/public/style.css
@@ -8,36 +8,7 @@ main {
     margin-top: 4em;
 }
 
-.is-vcentered {
-    align-items: center
-}
-
-.video-list {
-    margin-top: 3em;
-    background-color: #d2d2d2;
-}
-
-.convert-form {
-    margin-top: 1em; 
-}
-
-.video-container {
-    padding: 0px !important;
-    border-radius: 0px !important;
-    min-width: 550px
-}
-
-.video-container figure {
-    margin-left: 0px !important;
-    margin-right: 1px !important;
-}
-
-.content ul {
-    list-style-type: none;
-}
-
-.playlist-item {
-    margin-bottom: 5px !important;
-    margin-top: 0px;
-    margin-left: 1em;
+.video-list-item{
+    background-color: #073642;
+    border-radius: 0.3rem
 }
